--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,11 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.sikulix</groupId>
+            <artifactId>sikulixapi</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
     </dependencies>
 </project>
